# DTU-CTFDS-02807-PROJ

./: .gitignore  README.md  pyproject.toml
src/dtu_ctfds_02807_proj/: Clustering-test.ipynb  association_rules.ipynb  content_based_filtering.ipynb  context_creation.py  csv_flatten.py  download_dataset.py  exploratory.ipynb  preprocess.ipynb
src/dtu_ctfds_02807_proj/collaborative/: als_model.ipynb  clustering_model.ipynb  kmeans_model.ipynb
src/dtu_ctfds_02807_proj/content_based/: content_based_filtering.ipynb
