[project]
name = "DTU-CTFDS-02807-PROJ"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Group", email = "None"},
]
dependencies = ["pyspark>=3.5.3", "ipykernel>=6.29.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
