[project]
name = "DTU-CTFDS-02807-PROJ"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Group", email = "example@example.com"},
]
dependencies = [
    "pyspark>=3.3.1", 
    "ipykernel>=6.29.5", 
    "tqdm>=4.66.6", 
    "matplotlib>=3.9.2", 
    "pandas>=2.2.3", 
    "setuptools>=75.3.0", 
    "seaborn>=0.13.2",
    "numpy<2.0",
]

requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
